@@ -1,5 +1,10 @@
 2000-04-26  Dan Winship  <danw@helixcode.com>
 
+	* camel-mime-part.c (write_to_stream): Only write a newline
+	between the headers and the content object if the content object
+	is not a CamelMedium. (If the content is a medium, it may have its
+	own headers, which then need to go before the blank line.)
+
 	* camel-mime-body-part.[ch]: Remove. We weren't using the fields
 	that made this different from camel-mime-part, so it basically
 	just forced us to do lots of gratuitous typecasting.
